--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* wt stands for Web Tech */
+
+.wt-title {
+    @apply text-3xl font-bold underline mb-10;
+  }
